--- a/app/views/ideas/_idea.html.erb
+++ b/app/views/ideas/_idea.html.erb
@@ -11,7 +11,9 @@
 
   <p>
     <strong>Picture:</strong>
-    <%= idea.picture %>
+    <%#= idea.picture %>
+    <%= image_tag(idea.picture_url, width: 600) if idea.picture.present? %>
+    <%#= image_tag(@idea.picture_url, width: 600) if @idea.picture.present? %>
   </p>
 
 </div>
